# s4_plan

./: DESKTOP_APP_READY.md  DESKTOP_GUIDE.md  DESKTOP_SETUP.md  PWA_DESKTOP_SETUP.md  README.md  README_S4.txt  index.html  package-lock.json  package.json  tauri.conf.json  vite.config.js
public/: manifest.json  sw.js
src/: App.css  App.jsx  index.css  main.jsx
src-tauri/: Cargo.toml
src-tauri/src/: main.rs
src/components/: ChapterAccordion.jsx  Footer.jsx  ModuleCard.jsx  Navbar.jsx  NotesCard.jsx  ProgressCard.jsx  ResourceHub.jsx  RevisionCard.jsx  SearchBar.jsx  Sidebar.jsx  StatsSection.jsx  StudyPlanner.jsx
src/data/: resourcesData.js  siteData.js
src/pages/: Dashboard.jsx  Home.jsx  ModuleDetails.jsx  Notes.jsx  ProgressTracking.jsx  Revision.jsx  Standing.jsx  StandingModule.jsx
src/styles/: ChapterAccordion.css  Dashboard.css  Footer.css  Home.css  ModuleCard.css  ModuleDetails.css  Navbar.css  Notes.css  NotesCard.css  ProgressCard.css  ProgressTracking.css  ResourceHub.css  Revision.css  RevisionCard.css  SearchBar.css  Sidebar.css  Standing.css  StandingModule.css  StatsSection.css  StudyPlanner.css
